--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <img src="BeEF%20Basic%20Demo_files/beef.jpg">
 
-    <p>You should be hooked into <b>BeEF</b>.</p>
+    <p>into <b>ME</b>.</p>
     <p>Have fun while your browser is working against you.</p>
     <p>These links are for demonstrating the "Get Page HREFs" command module:</p>
     <ul>
